header address and QMS Code

--- a/public/css/print.css
+++ b/public/css/print.css
@@ -249,3 +249,9 @@ table.print-table th,table.print-table td{
     }
 
 }
+
+.qms-right{
+    text-align: right;
+    font-family: Cambria;
+    font-size: 8px;
+}
